bynkc/tests/fixtures/negative/374_test_call_on_non_call_service/src/demo/api.bynk
context demo.api

type Title = String where NonEmpty

service api from http {
  on POST("/items") (title: Title) -> Effect[HttpResult[Title]] by v: Visitor {
    Created(title)
  }
}
